Added the Courses Section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
-        <div class="text-box">
+        <div class="text-box">-
             <h1>The World Best Learning Centre</h1>
             <p>Learning has never being made this easy. You are not schooled but educated</p>
             <a href="" class="hero-btn"> Visit Us To Know More</a>
@@ -40,6 +40,30 @@
     <!-- The Header Section End -->
     
 
+    <!-- Courses Start Section -->
+    <section class="course" >
+        <h1>Courses We Offer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere voluptate nostrum qui, necessitatibus quis quidem eveniet sequi nemo mollitia ipsam exercitationem aut optio debitis minima laboriosam doloremque iste repellendus dolorem.</p>
+    
+        <div class="row">
+             <div class="course-col">
+                <h3>Mathematics</h3>
+                <p>Amet amet ea consectetur in mollit commodo ut irure ipsum in. Ut adipisicing et labore consequat enim et nisi. 
+                    Lorem esse tempor cillum voluptate velit aute id veniam sint nisi.</p>
+             </div>
+             <div class="course-col">
+                <h3>Mathemetical Literacy</h3>
+                <p>Amet amet ea consectetur in mollit commodo ut irure ipsum in. Ut adipisicing et labore consequat enim et nisi. 
+                    Lorem esse tempor cillum voluptate velit aute id veniam sint nisi.</p>
+             </div>
+             <div class="course-col">
+                <h3>Physical Sciences</h3>
+                <p>Amet amet ea consectetur in mollit commodo ut irure ipsum in. Ut adipisicing et labore consequat enim et nisi. 
+                    Lorem esse tempor cillum voluptate velit aute id veniam sint nisi.</p>
+             </div>
+        </div>
+    </section>
+    <!-- Courses End Section -->
 
     <!-- Scrips -->
 
